change dbeacon fonts

--- a/app/views/demo/dbeacon-chord.html
+++ b/app/views/demo/dbeacon-chord.html
@@ -1,2 +1,6 @@
 
-<div id="frame"></div>
+<div class="col-md-offset-2 col-md-7 col-xs-12">
+  <div class="col-md-12">
+    <div id="frame"></div>
+  </div>
+</div>
