--- a/app/views/demo/dbeacon.html
+++ b/app/views/demo/dbeacon.html
@@ -1,37 +1,39 @@
 
-<div class="col-md-2 col-xs-6">
-  <form>
-    <fieldset id="color-table-node">
-      <h3><small>Node Labels</small></h3>
-    </fieldset>
-    <div class="btn-toolbar text-center">
-      <button data-toggle="modal" data-target="#modalAddNode" id="showModalAddNode" class="btn btn-success">Add Node</button>
-    </div>
-  </form>
-  <form>
-    <fieldset id="color-table-link">
-      <h3><small>Relationship Types</small></h3>
-    </fieldset>
-    <div class="btn-toolbar text-center">
-      <button type="button" id="test" data-container="body" data-toggle="popover" data-placement="bottom" ng-click="chooseNodes()" class="btn btn-warning">Add Relationship</button>
-    </div>
-  </form>
+<div class="col-md-2 col-xs-12">
+  <div class="col-md-12 col-xs-6">
+    <form>
+      <fieldset id="color-table-node">
+        <h1><small>Node Labels</small></h1>
+      </fieldset>
+      <div class="btn-toolbar text-center">
+        <button data-toggle="modal" data-target="#modalAddNode" id="showModalAddNode" class="btn btn-success">Add Node</button>
+      </div>
+    </form>
+  </div>
+  <div class="col-md-12 col-xs-6">
+    <form>
+      <fieldset id="color-table-link">
+        <h1><small>Relationship Types</small></h1>
+      </fieldset>
+      <div class="btn-toolbar text-center">
+        <button type="button" id="test" data-container="body" data-toggle="popover" data-placement="bottom" ng-click="chooseNodes()" class="btn btn-warning">Add Relationship</button>
+      </div>
+    </form>
+  </div>
 </div>
-<div class="col-md-8 col-xs-12">
+<div class="col-md-7 col-xs-12">
   <div class="col-md-12">
     <div id="frame">
     </div>
   </div>
-  <div class="col-md-8">
+  <div class="col-md-8 col-xs-8">
     <div ng-show="graphInfo" class="text-success"><span class="glyphicon glyphicon-ok"></span><span>&nbsp</span><span>{{graphInfo}}</span></div>
   </div>
-  <div class="col-md-4">
-    <div class="btn-toolbar text-right">
-      <button id="btnDetail" class="btn btn-info"><i class="fa fa-lg fa-eye-slash">Hide Details</i></button>
-    </div>
+  <div class="col-md-offset-1 col-md-3 col-xs-offset-1 col-xs-3">
+    <button id="btnDetail" class="btn btn-block btn-info"><i class="fa fa-fw fa-lg fa-eye-slash"></i><span>Hide Details</span></button>
   </div>
 </div>
-<div class="col-md-2 col-xs-6">
+<div class="col-md-3 col-xs-6">
   <h1 ng-model="nodeLabel"><small>{{nodeLabel}}</small></h1>
   <div ng-model="nodeInfo">
     <table class="table table-bordered table-hover table-striped">
@@ -42,8 +44,8 @@
     </table>
   </div>
   <div ng-show="nodeId" class="btn-toolbar">
-    <button data-toggle="modal" data-target="#modalEdit" id="showModal" class="btn btn-info"><i class="fa fa-edit fa-lg">Edit</i></button>
-    <button ng-click="deleteNode()" class="btn btn-danger"><i class="fa fa-trash-o fa-lg">Delete</i></button>
+    <button data-toggle="modal" data-target="#modalEdit" id="showModal" class="btn btn-info"><i class="fa fa-fw fa-edit fa-lg"></i>Edit</button>
+    <button ng-click="deleteNode()" class="btn btn-danger"><i class="fa fa-fw fa-trash-o fa-lg"></i>Delete</button>
   </div>
   <div id="modalEdit" tabindex="-1" role="dialog" aria-labelledby="labelEditNode" aria-hidden="true" class="modal fade">
     <div class="modal-dialog">
@@ -156,21 +158,22 @@
   //   console.log("123");
   // });
   $('#btnDetail').on('click', function () {
-    var i = $(this).find('i');
+    var i    = $(this).find('i'),
+        span = $(this).find("span");
     console.log();
     if (i.hasClass('fa-eye-slash')) {
       i.removeClass('fa-eye-slash');
       i.addClass('fa-eye');
       $('.textNode').hide(500);
       $('.textLink').hide(500);
-      i.text("Show Details");
+      span.text("Show Details");
     }
     else {
       i.removeClass('fa-eye');
       i.addClass('fa-eye-slash');
       $('.textNode').show(500);
       $('.textLink').show(500);
-      i.text("Hide Details");
+      span.text("Hide Details");
     }
   });
 </script>
