fix jade & sass build bug and new chord layout

--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -142,11 +142,12 @@
     <!--     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');-->
     <!--     ga('create', 'UA-XXXXX-X');-->
     <!--     ga('send', 'pageview');-->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+    <!-- script(src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js")-->
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/jquery.easing/js/jquery.easing.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower_components/angular/angular.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="bower_components/angular-http-auth/src/http-auth-interceptor.js"></script>
     <script src="bower_components/angular-animate/angular-animate.min.js"></script>
