--- a/app/views/demo/dbeacon-chord.html
+++ b/app/views/demo/dbeacon-chord.html
@@ -1,6 +1,27 @@
 
-<div class="col-md-offset-2 col-md-7 col-xs-12">
+<div class="col-md-2 col-xs-6">
+  <div ng-model="nodeNeighbors">
+    <h1><small>Neighbors</small></h1>
+    <table class="table table-bordered table-hover table-striped">
+      <tr ng-repeat="neighbor in nodeNeighbors">
+        <th>{{neighbor}}</th>
+      </tr>
+    </table>
+  </div>
+</div>
+<div class="col-md-7 col-xs-12">
   <div class="col-md-12">
     <div id="frame"></div>
+  </div>
+</div>
+<div class="col-md-3 col-xs-6">
+  <div ng-model="nodeInfo">
+    <h1><small>{{nodeInfo.name}}</small></h1>
+    <table class="table table-bordered table-hover table-striped">
+      <tr ng-repeat="(key, value) in nodeInfo">
+        <th>{{key}}</th>
+        <td>{{value}}</td>
+      </tr>
+    </table>
   </div>
 </div>
