--- a/app/views/demo/dbeacon.html
+++ b/app/views/demo/dbeacon.html
@@ -36,8 +36,8 @@
 <div class="col-md-3 col-xs-6">
   <h1 ng-model="nodeLabel"><small>{{nodeLabel}}</small></h1>
   <div ng-model="nodeInfo">
-    <table class="table table-bordered table-hover table-striped">
-      <tr ng-repeat="(key, value) in nodeInfo">
+    <table class="table table-bordered table-hover">
+      <tr ng-repeat="(key, value) in nodeInfo" class="warning">
         <th>{{key}}</th>
         <td>{{value}}</td>
       </tr>
