fix layout about

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,11 +1,11 @@
 
 <div class="row">
-  <div class="col-md-6 col-xs-12">
+  <div class="col-md-6 col-xs-6">
     <div class="row intro-block">
       <div class="col-md-12">
         <div class="row">
-          <div class="col-md-5"><img src="/images/levi.jpg" id="me" class="img-thumbnail"/></div>
-          <div class="col-md-7">
+          <div class="col-md-5 col-xs-12"><img src="/images/levi.jpg" id="me" class="img-thumbnail"/></div>
+          <div class="col-md-7 col-xs-12">
             <p>I'm Levi Lu, a full-stack web developer.</p>
             <p><i class="fa fa-lg fa-fw fa-check text-success"></i> 
               Bachelor's degree of CS @ Tsinghua University
@@ -39,7 +39,7 @@
       </div>
     </div>
   </div>
-  <div class="col-md-6 col-xs-12">
+  <div class="col-md-6 col-xs-6">
     <div class="row skill-block">
       <div class="col-md-12">
         <div class="panel panel-warning">
