--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -115,9 +115,9 @@
         </div>
         <div id="myNav" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li ui-sref-active="active"><a ui-sref="blog"><i class="fa fa-lg fa-fw fa-coffee"></i>Blog</a></li>
-            <li ui-sref-active="active"><a ui-sref="demo"><i class="fa fa-lg fa-fw fa-caret-square-o-right"></i>Demo</a></li>
-            <li ui-sref-active="active"><a ui-sref="about"><i class="fa fa-lg fa-fw fa-user"></i>About</a></li>
+            <li ui-sref-active="active"><a href="#/blog"><i class="fa fa-lg fa-fw fa-coffee"></i>Blog</a></li>
+            <li ui-sref-active="active"><a href="#/demo"><i class="fa fa-lg fa-fw fa-caret-square-o-right"></i>Demo</a></li>
+            <li ui-sref-active="active"><a href="#/about"><i class="fa fa-lg fa-fw fa-user"></i>About</a></li>
           </ul>
           <div class="nav navbar-nav pull-right">
             <ul ng-hide="currentUser" class="nav navbar-nav">
