--- a/app/views/index.html
+++ b/app/views/index.html
@@ -111,7 +111,7 @@
     <nav role="navigation" ng-controller="NavbarCtrl" class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
-          <button data-toggle="collapse" data-target="#myNav" class="navbar-toggle"></button><a href="/" style="font-family: 'Norican', cursive; font-size: 24px" class="navbar-brand">Levi Lu</a>
+          <button data-toggle="collapse" data-target="#myNav" class="navbar-toggle"></button><a href="#/about" style="font-family: 'Norican', cursive; font-size: 24px" class="navbar-brand">Levi Lu</a>
         </div>
         <div id="myNav" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
