--- a/app/stylesheets/style.css
+++ b/app/stylesheets/style.css
@@ -128,8 +128,8 @@ a {
     font-family: 'Proxima Nova', 'Segoe UI', Roboto, 'Droid Sans', 'Helvetica Neue', Arial, sans-serif;
     font-size: 13px;
     font-weight: normal;
-    height: 42px;
-    line-height: 19px;
+    height: 4.2rem;
+    line-height: 1.9rem;
     margin-bottom: 30px;
     padding-bottom: 11px;
     padding-top: 11px;
